--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Union - [Nama Pria] & [Nama Wanita]</title>
+    <title>Hari Bahagia Robby And dini</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,7 +17,7 @@
             <div class="content">
                 <p>A Fated Union Of</p>
                 <h1>Robby & Andini </h1>
-                <p class="date">Soon....</p>
+                <p class="date">Antara Sabtu/Minggu</p>
             </div>
         </section>
 
@@ -46,18 +46,18 @@
                 <div class="event-details">
                     <div class="event-card">
                         <h3>The Vows</h3>
-                        <p><strong>Coming Soon</strong></p>
+                        <p><strong>Antara Sabtu/Minggu</strong></p>
                         <p>08 AM</p>
                         <p>Jungfraujoch (Top of Europe), Switzerland</p>
                     </div>
                     <div class="event-card">
                         <h3>The Feast</h3>
-                        <p><strong>Coming Soon</strong></p>
+                        <p><strong>Antara Sabtu/Minggu</strong></p>
                         <p>08 PM</p>
                         <p>Mount Fuji (Shizuoka/Yamanashi), Japan</p>
                     </div>
                 </div>
-                <a href="https://www.google.com/maps/place/[Link+Google+Maps]" target="_blank" class="btn">Find The Location</a>
+                <a href="https://maps.app.goo.gl/zt6utN5awjPirHd69" target="_blank" class="btn">Find The Location</a>
             </div>
         </section>
         
@@ -117,7 +117,7 @@
             <p>Bear Witness To The Union Of</p>
             <h1>Robby Riandi & Andini Widiawati</h1>
             <p>To The Honored</p>
-            <h2 class="guest-name">Nama Tamu</h2>
+            <h2 class="guest-name">For You</h2>
             <button id="open-invitation" class="btn">Unleash The Invitation</button>
         </div>
     </div>
