--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=UnifrakturMaguntia&family=Oswald:wght@300;400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Metal+Mania&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -117,7 +117,7 @@
             <p>Bear Witness To The Union Of</p>
             <h1>Robby Riandi & Andini Widiawati</h1>
             <p>To The Honored</p>
-            <h2 class="guest-name">For You</h2>
+            <h2 class="guest-name">Kamu Di Undang</h2>
             <button id="open-invitation" class="btn">Unleash The Invitation</button>
         </div>
     </div>
